# qtchat

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  build.sh  client.h  m.cpp  main.cpp
Server/: CMakeLists.txt  build.sh  qbuild.sh  se.cpp  se.h  wi.cpp  wi.h
